# KY015-DHT11-raspberry-temp-sensor

./: .gitignore  README.md
agent/: Makefile  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt
agent/app/: api.py  app.py  log.py
agent/app/api/: api.py
agent/app/sensor/: create_sensor.py  dht22_sensor.py  mock_sensor.py  sensor.py  sensor_data.py
agent/cmd/: root.go
agent/internal/agent/: agent.go
agent/internal/app/: app.go  app_test.go
agent/pkg/gpio/: gpio.go  gpioChipInfo.go  gpioHandleData.go  gpioHandleRequest.go
agent/pkg/sensor/: DHT22.go  DHT22_darwin.go  DHT22_linux.go  data.go  mock.go  sensor.go
agent/scripts/: install.sh
agent/stubs/: config.env  rtsa-agent.service
raspberry/: README.md  main.py  requirements.txt
raspberry/env/: pyvenv.cfg
raspberry/log/: log.py  logFormat.py  logLevel.py
raspberry/log/providers/: jsonProvider.py  logProvider.py  plainTextProvider.py
web-app/: .env.example  README.md  composer.json  package-lock.json  package.json
web-app/app/Models/: Device.php  TemperatureEntry.php  User.php
web-app/app/Providers/: JetstreamServiceProvider.php
web-app/database/factories/: DeviceFactory.php  TemperatureEntryFactory.php
web-app/database/migrations/: 2024_12_06_215839_create_devices_table.php  2024_12_06_220012_create_temperature_entries_table.php
web-app/database/seeders/: DatabaseSeeder.php  DeviceSeeder.php  TemperatureEntrySeeder.php  UserSeeder.php
web-app/routes/: api.php  web.php
web-app/tests/Manual/: CreateTemperatureEntry.http
(+22 files in other folders)
