[project]
name = "rtsa"
version = "0.0.0"
dependencies = [
    "binho-host-adapter==0.1.6",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "pyftdi==0.56.0",
    "pyserial==3.5",
    "pyusb==1.3.1",
    "requests==2.32.3",
    "sysv-ipc==1.1.0",
    "typing_extensions==4.14.0",
    "urllib3==2.4.0",
]

[project.optional-dependencies]
full = [
    "Adafruit-Blinka==8.58.1",
    "adafruit-circuitpython-busdevice==5.2.12",
    "adafruit-circuitpython-connectionmanager==3.1.4",
    "adafruit-circuitpython-dht==4.0.8",
    "adafruit-circuitpython-requests==4.1.12",
    "adafruit-circuitpython-typing==1.12.1",
    "Adafruit-PlatformDetect==3.79.0",
    "Adafruit-PureIO==1.1.11",
    "RPi.GPIO==0.7.1",
]